--- a/source/index.html
+++ b/source/index.html
@@ -7,10 +7,9 @@
     <meta name="description" content="">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Google Fonts and libs.css commented out. uncomment if needed. -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"> -->
-    <!-- <link href="css/libs.css" rel="stylesheet"> -->
+    <link href="css/libs.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 </head>
 
 <body>
