--- a/html/source/body/content.html
+++ b/html/source/body/content.html
@@ -94,7 +94,7 @@
             <div class="projects-wrapper" id="projects-wrapper"></div>
         </div>
         <!-- EmojiOne Attribution -->
-        <div class="emojione-attribution-wrapper animate-fadein">
+        <div id="emojione-attribution-wrapper" class="emojione-attribution-wrapper animate-fadein hidden">
             <div class="attribution-message-wrapper">
                 <p class="attribution-message-text">
                     Moji artwork is provided by <a href="https://www.emojione.com/" target="_blank" class="attribution-link">EmojiOne</a> and is licensed under <a href="https://creativecommons.org/licenses/by/4.0/legalcode" target="_blank" class="attribution-link">CC-BY 4.0</a>
