fix: Hamburger menu/highlight current tab function

--- a/html/source/body/content.html
+++ b/html/source/body/content.html
@@ -38,7 +38,7 @@
             <!-- [https://googlechrome.github.io/samples/css-flexbox-abspos/] -->
             <!-- HAMBURGER MENU -->
             <div class="absolute-child-fix-wrapper hide500plus">
-                <div class="popup popup-menu-wrapper hidden unselectable" data-delegation="hamburger_menu;stop" id="popup-menu-wrapper">
+                <div class="popup popup-menu-wrapper hidden unselectable" data-delegation=";stop" id="popup-menu-wrapper">
                     <!-- HAMBURGER MENU ITEMS -->
                     <ul class="ul-reset">
                         <li class="popup-item text-vertical-center flex" data-delegation="nav_popup_home;" data-syncid="nav-home" id="nav-popup-home">
