refactor: Make the header more mobile-like
- Reduce the size of the hamburger menu and logo.
- Make the header fixed.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div id="portfolio-wrapper" class="portfolio-wrapper">
         <!-- HEADER CONTENT -->
         <header class="header-wrapper position-center">
-            <div class="header-logo-wrapper unselectable"></div>
+            <div class="logo-wrapper">
+                <div class="header-logo-wrapper unselectable"></div>
+            </div>
             <nav class="nav-wrapper">
                 <!-- EXTENDED MENU -->
                 <div class="nav-expanded-wrapper">
