chore: Update and cleanup landing message

--- a/html/source/body/content.html
+++ b/html/source/body/content.html
@@ -82,9 +82,9 @@
             <div class="message-title">
                 Well, hello there!
             </div>
-            <p class="message-text">First things first, my name is Carlos. I'm an aspiring front-end web developer who <span class="emoticon-shortname">:heart_decoration:</span>'s the Web and UI. I like to keep things simple while still elegant and clean.</p>
-            <p class="message-text">Although graduating from college with a biology degree, I had a change of heart and decided to become a web developer. Yes, I love the web that much! <span class="emoticon-shortname">:grin:</span> Having an eye for detail, I naturally found Front-End web development quite fitting. What can I say, I like it when a website looks good. <span class="emoticon-shortname">:smirk:</span></p>
-            <p class="message-text">I'm currently open for contracted, full-time, or part-time work. Check out my work to see what I can do! <span class="emoticon-shortname">:smiley:</span></p>
+            <p class="message-text">First things first, my name is Carlos. I'm an aspiring front-end web developer who <span class="emoticon-shortname">:heart_decoration:</span>s the Web and UI.</p>
+            <p class="message-text">Although graduating from college with a biology degree, I had a change of heart and decided to become a web developer. Yes, I love the web that much! Having an eye for detail, I naturally found front end web development quite fitting. <span class="emoticon-shortname">:smirk:</span></p>
+            <p class="message-text">I'm currently open for contracted, full-time, or part-time work. Check out my projects to see what I can do! <span class="emoticon-shortname">:smiley:</span></p>
         </div>
         <div class="section-works-wrapper hidden animate-fadein" id="section-works-wrapper">
             <div class="message-title">
