--- a/index.html
+++ b/index.html
@@ -61,28 +61,29 @@
                         <!-- HAMBURGER MENU ITEMS -->
                         <ul class="ul-reset">
                             <li class="popup-item text-vertical-center flex" data-delegation="nav_popup_home;" data-syncid="nav-home" id="nav-popup-home">
-                                <span class="menu-link-rmargin">
+                                <!--                             <span class="menu-link-rmargin">
                                     <i aria-hidden="true" class="fa fa-home"></i>
-                                </span>
+                                </span> -->
                                 <span>home</span>
                             </li>
                             <li class="popup-item text-vertical-center flex" data-delegation="nav_popup_works;" data-syncid="nav-works" id="nav-popup-works">
-                                <span class="menu-link-rmargin">
+                                <!--                             <span class="menu-link-rmargin">
                             <i aria-hidden="true" class="fa fa-file-code-o"></i>
-                        </span>
+                        </span> -->
                                 <span>projects</span>
                             </li>
                             <li class="popup-item text-vertical-center flex" data-delegation="nav_resume;stop;pd" data-syncid="nav-resume" id="nav-popup-resume">
                                 <a href="https://cgabriel5.github.io/resume/" target="_blank" class="a-unstyle text-vertical-center flex">
-                                <span class="menu-link-rmargin">
-                            <i aria-hidden="true" class="fa fa-external-link-square"></i>
-                        </span> <span>resume</span>
-                            </a>
+                                    <!-- <span class="menu-link-rmargin">
+                                    <i aria-hidden="true" class="fa fa-external-link-square"></i>
+                                </span> -->
+                                    <span>resume</span>
+                                </a>
                             </li>
                             <li class="popup-item text-vertical-center flex hidden" data-delegation="nav_popup_contact;" data-syncid="nav-contact" id="nav-popup-contact">
-                                <span class="menu-link-rmargin">
-                            <i aria-hidden="true" class="fa fa-envelope"></i>
-                        </span>
+                                <!--                             <span class="menu-link-rmargin">
+                                <i aria-hidden="true" class="fa fa-envelope"></i>
+                            </span> -->
                                 <span>contact</span>
                             </li>
                         </ul>
