--- a/index.html
+++ b/index.html
@@ -56,34 +56,26 @@
                 <!-- [https://developers.google.com/web/updates/2016/06/absolute-positioned-children] -->
                 <!-- [https://googlechrome.github.io/samples/css-flexbox-abspos/] -->
                 <!-- HAMBURGER MENU -->
-                <div class="absolute-child-fix-wrapper hide500plus">
+                <div class=" hide500plus">
                     <div class="popup popup-menu-wrapper hidden unselectable" data-delegation=";stop" id="popup-menu-wrapper">
                         <!-- HAMBURGER MENU ITEMS -->
                         <ul class="ul-reset">
                             <li class="popup-item text-vertical-center flex" data-delegation="nav_popup_home;" data-syncid="nav-home" id="nav-popup-home">
-                                <!--                             <span class="menu-link-rmargin">
-                                    <i aria-hidden="true" class="fa fa-home"></i>
-                                </span> -->
+                                <span class="menu-link-rmargin"><i aria-hidden="true" class="fa fa-home"></i></span>
                                 <span>home</span>
                             </li>
                             <li class="popup-item text-vertical-center flex" data-delegation="nav_popup_works;" data-syncid="nav-works" id="nav-popup-works">
-                                <!--                             <span class="menu-link-rmargin">
-                            <i aria-hidden="true" class="fa fa-file-code-o"></i>
-                        </span> -->
+                                <span class="menu-link-rmargin"><i aria-hidden="true" class="fa fa-file-code-o"></i></span>
                                 <span>projects</span>
                             </li>
-                            <li class="popup-item text-vertical-center flex" data-delegation="nav_resume;stop;pd" data-syncid="nav-resume" id="nav-popup-resume">
-                                <a href="https://cgabriel5.github.io/resume/" target="_blank" class="a-unstyle text-vertical-center flex">
-                                    <!-- <span class="menu-link-rmargin">
-                                    <i aria-hidden="true" class="fa fa-external-link-square"></i>
-                                </span> -->
+                            <a href="https://cgabriel5.github.io/resume/" target="_blank" class="a-unstyle text-vertical-center flex">
+                                <li class="popup-item text-vertical-center flex" data-delegation="nav_resume;stop;pd" data-syncid="nav-resume" id="nav-popup-resume">
+                                    <span class="menu-link-rmargin"><i aria-hidden="true" class="fa fa-external-link-square"></i></span>
                                     <span>resume</span>
-                                </a>
-                            </li>
+                                </li>
+                            </a>
                             <li class="popup-item text-vertical-center flex hidden" data-delegation="nav_popup_contact;" data-syncid="nav-contact" id="nav-popup-contact">
-                                <!--                             <span class="menu-link-rmargin">
-                                <i aria-hidden="true" class="fa fa-envelope"></i>
-                            </span> -->
+                                <span class="menu-link-rmargin"><i aria-hidden="true" class="fa fa-envelope"></i></span>
                                 <span>contact</span>
                             </li>
                         </ul>
