refactor: Cleanup landing message, minor CSS design tweaks

--- a/html/source/body/content.html
+++ b/html/source/body/content.html
@@ -73,18 +73,18 @@
     <main class="main-content-wrapper position-center">
         <div class="section-aboutme-wrapper hidden animate-fadein" id="section-aboutme-wrapper">
             <div class="message-title">
-                Well, hello there!
+                Hello!
             </div>
-            <p class="message-text">First things first, my name is Carlos. I'm an aspiring front-end web developer who <span class="emoticon-shortname">:heart_decoration:</span>s the Web and UI.</p>
-            <p class="message-text">Although graduating from college with a biology degree, I had a change of heart and decided to become a web developer. Yes, I love the web that much! Having an eye for detail, I naturally found front end web development quite fitting. <span class="emoticon-shortname">:smirk:</span></p>
-            <p class="message-text">I'm currently open for contracted, full-time, or part-time work. Check out my projects to see what I can do! <span class="emoticon-shortname">:smiley:</span></p>
+            <p class="message-text">My name is <span><code class="code-name">&lt;</code><code class="code-name code-name-color">carlos</code><code class="code-name">&gt;</code></span> and I'm a front-end web developer.</p>
+            <p class="message-text">Though graduating college with a Biology degree I had a change of heart and decided to pursue web developement. Yes, I love the web that much!</p>
+            <p class="message-text">Take a look at my projects. Check out what I can do! <span class="emoticon-shortname">:smiley:</span></p>
         </div>
         <div class="section-works-wrapper hidden animate-fadein" id="section-works-wrapper">
             <div class="message-title">
                 Projects
             </div>
-            <p class="message-text">Listed below are the projects I have created. Feel free to check them out!</p>
-            <p class="message-text message-text-workcallout">Interested in hiring me? Want to work together? Have projects needed to be brought to life? <span class="contact-link" data-delegation="nav_contact;stop">Blast an email my way</span>. I'm ready to hear from you! <span class="emoticon-shortname">:nerd:</span></p>
+            <p class="message-text">Listed below are projects I've created.</p>
+            <p class="message-text message-text-workcallout">See value in me? <span class="contact-link" data-delegation="nav_contact;stop">I'm ready to hear from you.</span> <span class="emoticon-shortname">:nerd:</span></p>
             <!-- PROJECTS -->
             <div class="projects-wrapper" id="projects-wrapper"></div>
         </div>
