--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     Hello!
                 </div>
                 <p class="message-text">My name is <span><code class="code-name">&lt;</code><code class="code-name code-name-color">carlos</code><code class="code-name">&gt;</code></span> and I'm a front-end web developer.</p>
-                <p class="message-text">Though graduating college with a Biology degree I had a change of heart and decided to pursue web developement. Yes, I love the web that much!</p>
+                <p class="message-text">Though graduating college with a Biology degree I had a change of heart and decided to pursue web development. Yes, I love the web that much!</p>
                 <p class="message-text">Take a look at my projects. Check out what I can do! <span class="emoticon-shortname">:smiley:</span></p>
             </div>
             <div class="section-works-wrapper hidden animate-fadein" id="section-works-wrapper">
